fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@
         "five";
        width: 90%;
        height: auto;
-       padding: 50px;
+       margin: 50px;
     }
   
     .one,
